2010-01-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkpasswd-pbkdf2.c (main): Use grub_util_init_nls.
	Reported by: Grégoire Sutre

2010-01-11  Robert Millan  <rmh.grub@aybabtu.com>

	* util/misc.c (canonicalize_file_name): New function.
	(make_system_path_relative_to_its_root): Use canonicalize_file_name()
	instead of realpath().

2010-01-11  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-install.in (usage): Clarify meaning of --root-directory,
	and make it clearer that it's optional.  Based on confusion
	witnessed on IRC.

2010-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/i386/pc/vga_text.c (inc_y): Fix off-by-one error which resulted
	in premature implicit newline.

2010-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* normal/cmdline.c (grub_cmdline_get): Fix off-by-one error
	which resulted in garbled command line at the end of screen.

2010-01-10  Robert Millan  <rmh.grub@aybabtu.com>

	* loader/i386/ieee1275/linux.c (grub_linux_boot): Rework video position
	initialization with similar approach as with other Linux loaders.

2010-01-10  Robert Millan  <rmh.grub@aybabtu.com>

	Fix i386-ieee1275 build.

	* loader/i386/ieee1275/linux.c (grub_linux_boot): Use grub_term_width()
	and grub_term_height() for video_{width,height} initialization.

2010-01-10  Robert Millan  <rmh.grub@aybabtu.com>

	Fix grub-emu build.

	* conf/any-emu.rmk (grub_emu_SOURCES): Remove `kern/reader.c'.

2010-01-07  Vladimir Serbinenko  <phcoder@gmail.com>
2010-01-09  Robert Millan  <rmh.grub@aybabtu.com>

	Support for multiple terminals.

	* Makefile.in (pkglib_DATA): terminal.lst.
	(terminal.lst): New target.
	* commands/handler.c (grub_cmd_handler): Don't handle terminals.
	(GRUB_MOD_INIT(handler)): Likewise.
	(GRUB_MOD_FINI(handler)): Likewise.
	* commands/help.c (grub_cmd_help): Handle multiple terminals.
	* commands/keystatus.c (grub_cmd_keystatus): Likewise.
	* commands/sleep.c (do_print): Use grub_term_restore_pos.